--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
-<h1>
-  {{title}}
-</h1>
+<div>
+  <nav class="navbar navbar-default">
+    <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="http://codingthesmartway.com" target="_blank">CodingTheSmartWay.com</a>
+    </div>
+    <div *ngIf="isLoggedIn">
+      <p class="navbar-text navbar-right">Logged In: {{user_displayName}} ({{user_email}})</p>
+    </div>
+    <div *ngIf="!isLoggedIn">
+      <p class="navbar-text navbar-right">Logged Out!</p>
+    </div>
+    </div>
+  </nav>
+  <router-outlet></router-outlet>
+</div>
